# langchain-tour

./: .gitignore  agent-graph.py  agent.py  agent2.py  embedding.py  embedding2.py  main.py  ollama.py  pdf-loader.py  pyproject.toml  rag.ipynb  redis_chat_history.py  tools.py  vector-store-redis-chain.py  vector-store-redis.py  vector-store.py
example_data/: question_answer.txt
