[project]
name = "python-tour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.54",
    "langchain-deepseek==0.1.3",
    "langchain-openai>=0.3.14",
    "langchain-redis>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.31",
    "numpy>=1.26.4",
    "redis>=5.2.1",
    "scikit-learn>=1.6.1",
]
